--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -15,17 +15,22 @@ stages:
     steps:
     - bash: echo build second job  
 - stage: DevDeploy
+  dependsOn: Build
   jobs:
   - job: DevDeploy
     steps:
     - bash: echo DevDeploy
    
 - stage: QADeploy
+  dependsOn: Build
   jobs:
   - job: QADeploy
     steps:
     - bash: echo QADeploy
 - stage: PeridDeploy
+  dependsOn:
+  - DevDeploy
+  - QADeploy
   jobs:
   - job: PeridDeploy
     steps:
