--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -11,22 +11,27 @@ stages:
   - job: FirstJob
     steps:
     - bash: echo build first job
+    - bash: echo $(PipeLineLevelVariable)
   - job: SecondJob
     steps:
     - bash: echo build second job  
 - stage: DevDeploy
+  variables:
+   Stage: Dev
   dependsOn: Build
   jobs:
   - job: DevDeploy
     steps:
-    - bash: echo DevDeploy
+    - bash: echo $(Stage)
    
 - stage: QADeploy
+  variables:
+   Stage: QA
   dependsOn: Build
   jobs:
   - job: QADeploy
     steps:
-    - bash: echo QADeploy
+    - bash: echo $(QA)
 - stage: PeridDeploy
   dependsOn:
   - DevDeploy
