Update 02-understanding-stages.yml for Azure Pipelines

--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -31,7 +31,7 @@ stages:
   jobs:
   - job: QADeploy
     steps:
-    - bash: echo $(QA)
+    - bash: echo $(Stage)
 - stage: PeridDeploy
   dependsOn:
   - DevDeploy
